# salvo-admin-sqlite-api

./: .gitignore  Cargo.toml
data/sqlite/: mysql.sql  sqlite.db  sqlite.sql
env/: application.toml  application.yml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/home/: mod.rs
src/api/home/captcha/: mod.rs
src/api/home/dashboard/: service.rs
src/api/home/index/: mod.rs  service.rs  stc.rs
src/api/home/login/: mod.rs
src/api/sys/: mod.rs
src/api/sys/acl/: dao.rs  service.rs  stc.rs
src/api/sys/acl_module/: dao.rs  service.rs  stc.rs
src/api/sys/menu/: dao.rs  mod.rs  service.rs  stc.rs
src/api/sys/role/: dao.rs  service.rs  stc.rs
src/api/sys/role_acl/: mod.rs
src/api/sys/role_menu/: dao.rs  service.rs  stc.rs
src/api/sys/user/: dao.rs  mod.rs  service.rs  stc.rs
src/api/sys/user_role/: dao.rs  mod.rs  service.rs  stc.rs
src/cache/: mod.rs
src/catcher/: mod.rs
src/config/: application.rs  mod.rs
src/db/: sqlite.rs
src/global/: cst.rs
src/log/: mod.rs
src/middleware/: auth.rs  mod.rs  size.rs
src/res/: error.rs  result.rs
src/util/: mod.rs
src/util/date/: mod.rs
src/util/from/: mod.rs  toml.rs  yml.rs
src/util/jwt/: mod.rs
src/util/level_util/: mod.rs
src/util/page/: mod.rs
src/util/tree/: mod.rs
src/util/uuid/: mod.rs
