[package]
name = "salvo-admin-sqlite-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
salvo = { version = "0.51.0"}
tokio = { version = "1", features = ["macros"] }

# log
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "time",
  "local-time",
  "registry",
] }
tracing-appender = "0.2"
clia-local-offset = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }

# handle error
thiserror = "1.0"
anyhow = "1.0"

# parse file to struct 
toml = "0.7"       # parse .toml confifuration file to struct
serde_yaml = "0.9" # parse .yaml or .yml confifuration file to struct

# set the config file to a struct as a global static variable  
once_cell = "1"

# time 
time = { version = "0.3", features = ["macros"] } # for log
chrono = { version = "0.4", features = ["serde"]} # for database

# database
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "offline",
  "sqlite",
] }

# uuid
uuid = { version = "1", features = ["serde", "v4"] }

# jwt
jsonwebtoken = "8.0"

# encode the password
bcrypt = "0.14"

# key value store
# sled = "0.34"
mini-moka = "0.10"

# generate random string
rand = "0.8"

# generate captcha
captcha-rs = "0.2.10"

# improve the release size
[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

